# EducationFastAPI

./: README.md  alembic.ini  main.py  pyproject.toml
Step_04/first_route/: Readme.md  main.py
Step_04/hotels/: Readme.md  main.py
src/: config.py  database.py  hotels.py  main.py
src/_help/: _алхимия.md  _корневой_путь.md  _миграции.md  _разное.md
src/api/: auth.py  dependencies.py  hotels.py
src/migrations/: env.py
src/migrations/versions/: 2025_04_15_1908-2c1bf0cf5a7e_initial_migration.py  2025_05_04_1652-92d8f4dd4665_add_users_table.py  2025_05_04_1852-707a24c95cc5_user_unique_email_column.py  8ce7690272d0_initial_migration.py  b4b829ac262e_initial_migration.py
src/models/: hotels.py  rooms.py  users.py
src/repositories/: base.py  hotels.py  rooms.py  users.py
src/schemas/: hotel.py  user.py
src/services/: auth.py
