[project]
name = "educationfastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "unicorn>=2.1.3",
]
